--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/action_cancel"
+        android:icon="@android:drawable/alert_dark_frame"
+        android:title="Cancel"/>
+    <item
         android:id="@+id/action_send_mail"
         android:icon="@android:drawable/alert_dark_frame"
         android:title="Send as email"/>
