--- a/app/src/main/res/layout/activity_learn_style.xml
+++ b/app/src/main/res/layout/activity_learn_style.xml
@@ -12,49 +12,62 @@
 
     <TextView
         android:id="@+id/textView"
+        style="@style/AppSmallText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:textSize="12sp"
-        android:fontFamily="monospace"
-        android:textColor="#616161"
-        android:textStyle="bold"
         android:text="Small Text"/>
 
     <TextView
+        style="@style/appMediumText"
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:fontFamily="monospace"
-        android:textStyle="italic"
-        android:textColor="#616161"
         android:text="Medium Text"/>
 
     <TextView
+        style="@style/appLargeText"
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:fontFamily="monospace"
-        android:textColor="#616161"
         android:text="Large Text"/>
 
     <TextView
+        style="@style/appExtraLargeText"
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:fontFamily="monospace"
-        android:textColor="#616161"
         android:text="Extra Large Text"/>
 
     <TextView
+        style="@style/appExtraLargeTextLight"
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
-        android:fontFamily="monospace"
-        android:textSize="22sp"
-        android:textColor="#909090"
         android:layout_height="wrap_content"
         android:text="Extra Large Light"/>
+
+    <RadioButton
+        style="@style/myRadioButton"
+        android:id="@+id/radioButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="my radio button" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/button_background_selector"
+        android:textColor="@android:color/white"
+        android:text="Button One"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/button_color_selector"
+        android:text="Button Two"/>
 </LinearLayout>
